--- a/css/mainPage/section.css
+++ b/css/mainPage/section.css
@@ -34,6 +34,7 @@
 .section_icons_wrapper{
 	color: white;
 	height: 20vh;
+    perspective: 50000px;
 }
 
 .section-icons_wrapper-element{
@@ -139,10 +140,25 @@
 	text-align: center;
 	clear: left;
 	opacity: 0;
+	transition: 0.8s;
+	text-shadow: 1px 1px 50px white;
 }
 
 .recru_more:hover{
 	font-size: 2.3vh;
-	font-weight: 700;
+	font-weight: 600;
 	text-shadow: 1px 1px 80px white;
+}
+
+.arrow-down{
+	position: absolute;
+	height: 10vh;
+	width: 10vh;
+	background-image: url("../../asset/utilities/arrow-down.png");
+	background-position: center;
+	background-size: contain;
+	opacity: 0.8;
+	right: 5vw;
+	bottom: 5vh;
+	filter: drop-shadow(1px 1px 20px black)
 }
